--- a/css/chamada.css
+++ b/css/chamada.css
@@ -32,7 +32,7 @@
     width: 100%;
 }
 
-@media screen and (min-width:768px){
+@media screen and (min-width: 768px) {
     .chamada__texto {
         max-width: 600px;
     }
@@ -40,12 +40,14 @@
 
 @media screen and (min-width: 1024px) {
     .chamada {
-        background-image: url('../img/bg-intro.jpg');
+        background-image: url(../img/bg-intro.jpg);
         background-size: cover;
+
         padding-top: 8.25rem;
     }
+
     .chamada__titulo {
-        font-size: 3.25;
+        font-size: 3.25rem;
         margin-bottom: 2rem;
     }
 }
